--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="styles/carousel.css">
     <script src="styles/bootstrap/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="styles/bootstrap/js/tooltip.js">
 
     <!-- =============== AngularJS =============== -->
     <script src="scripts/angularjs/angular.js"></script>
@@ -31,6 +30,7 @@
     <script src="features/project/list/projectListController.js"></script>
     <script src="features/project/info/sidebarController.js"></script>
     <script src="features/project/info/summaryController.js"></script>
+
     <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
     <script src="features/carousel/carouselDirective.js"></script>
@@ -41,6 +41,7 @@
 
     <!-- components -->
     <script src="components/tabs/tabDirectives.js"></script>
+    <script src="components/confirm_box/confirmBoxDirective.js"></script>
 
     <!-- filters -->
     <script src="components/filters/customFilters.js"></script>
@@ -54,7 +55,8 @@
     <link rel="stylesheet" href="styles/hover.css">
 
     <!-- =============== Font Awesome =============== -->
-    <link rel="stylesheet" href="styles/font-awesome-4.6.3/css/font-awesome.css">
+    <link rel="stylesheet"
+          href="styles/font-awesome-4.6.3/css/font-awesome.css">
 </head>
 
 
