--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <!-- =============== JointJS =============== -->
     <link rel="stylesheet" href="styles/joint.css"/>
     <script src="scripts/jquery/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
     <script src="scripts/lodash.js"></script>
     <script src="scripts/backbone.js"></script>
     <script src="scripts/joint/joint.js"></script>
