Add draggable images/ui to graph

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,12 @@
     <script src="scripts/joint/joint.js"></script>
     <script src="features/graph/joint_setup.js"></script>
 
+    <!-- css for jquery-ui/jointjs -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- custom stylsesheet -->
+
     <!-- =============== Bootstrap =============== -->
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap-theme.css">
