--- a/app/features/graph/joint-graph.html
+++ b/app/features/graph/joint-graph.html
@@ -101,7 +101,23 @@
             </confirm-box>
         </div>
 
-        <div id="paper" ng-show="getActiveProject().id"></div>
+        <div class="container">
+            <!-- added placeholder images for services -->
+            <img class="_item" id="img1"
+                 src="../../images/Khaki_Solid.svg.png"/>
+            <img class="_item" id="img2"
+                 src="../../images/Mahogany_Solid.svg.png"/>
+            <img class="_item" id="img3"
+                 src="../../images/Yellow_Solid.svg.png"/>
+            <img class="_item" id="img4"
+                 src="../../images/Khaki_Solid.svg.png"/>
+            <img class="_item" id="img5"
+                 src="../../images/Mahogany_Solid.svg.png"/>
+            <img class="_item" id="img6"
+                 src="../../images/Yellow_Solid.svg.png"/>
+        </div>
+
+        <div id="paper"></div>
     </div>
 </div>
 
@@ -128,6 +144,11 @@
      *
      * Paper is the container for the view, the window to the view.
      */
+
+
+    /* =============== MAIN_GRAPH LOGIC =============== */
+
+    /* Paper Object setup */
     var paper = new joint.dia.Paper({
         el: $('#paper'),
         width: 1800,
@@ -136,8 +157,8 @@
         model: MAIN_GRAPH,
         defaultLink: function() {
             link = new joint.dia.Link({
-                router: { name: 'metro' },
-                connector: { name: 'rounded' },
+                router: {name: 'metro'},
+                connector: {name: 'rounded'},
                 attrs: {
                     '.connection': {
                         stroke: '#333333',
@@ -153,5 +174,69 @@
             console.log(linklist)
             return link
         }
+    });
+
+
+    /* allows for drag and drop */
+    $(document).ready(function() {
+
+        $("._item").draggable({
+            helper: 'clone',
+            zIndex: 10000 // was having issues with paper being over draggable _item
+        });
+        $(document).ready(function() {
+            $('[data-toggle="popover"]').popover();
+        });
+        $("#paper").droppable({
+
+            // creates a node on the mouse up,based on what image id was dropped
+            // in the paper from the sidescroll list above
+            drop: function(event, ui) {
+
+                var offset = $(this).offset();
+                var relX = ui.position.left - offset.left;
+                var relY = ui.position.top - offset.top;
+
+                var id = ui.draggable.prop('id');
+
+                console.log($("#paper").css("z-index"));
+                console.log($("#" + id).css("z-index"));
+
+                var dropText = '';
+
+                // id will determine what type of node is created
+                // color is used for testing
+                if (id == 'img1') dropText = 'WeatherByZip';
+                else if (id == 'img2') dropText = 'WeatherByCity';
+                else if (id == 'img3') dropText = 'CalculatorAdd';
+                else if (id == 'img4') dropText = 'CalculatorSubtract';
+                else if (id == 'img5') dropText = 'CalculatorMultiply';
+                else dropText = 'CalculatorDivide';
+
+                var newNode = new joint.shapes.devs.Coupled({
+                    position: {x: relX, y: relY},
+                    size: {width: 140, height: 70},
+                    inPorts: ['In'],
+                    outPorts: ['Out'],
+                    attrs: {
+                        '.label': {text: dropText},
+                        rect: {fill: '#d9534f'},
+
+                        '.inPorts circle': {
+                            fill: '#16A085',
+                            magnet: 'passive',
+                            type: 'input',
+                            r: '10'
+                        },
+                        '.outPorts circle': {
+                            fill: '#E74C3C',
+                            type: 'output',
+                            r: '10'
+                        }
+                    }
+                });
+                MAIN_GRAPH.addCell(newNode);
+            }
+        });
     });
 </script>
