Replace placeholder imgs with nice icon
they represent webservices

--- a/app/features/graph/joint-graph.html
+++ b/app/features/graph/joint-graph.html
@@ -101,20 +101,22 @@
             </confirm-box>
         </div>
 
-        <div class="container">
+        <div class="container text-center">
             <!-- added placeholder images for services -->
-            <img class="_item" id="img1"
-                 src="../../images/Khaki_Solid.svg.png"/>
-            <img class="_item" id="img2"
-                 src="../../images/Mahogany_Solid.svg.png"/>
-            <img class="_item" id="img3"
-                 src="../../images/Yellow_Solid.svg.png"/>
-            <img class="_item" id="img4"
-                 src="../../images/Khaki_Solid.svg.png"/>
-            <img class="_item" id="img5"
-                 src="../../images/Mahogany_Solid.svg.png"/>
-            <img class="_item" id="img6"
-                 src="../../images/Yellow_Solid.svg.png"/>
+            <i id="img1" class="_item fa fa-calculator fa-5x hvr-wobble-to-bottom-right"
+               aria-hidden="true"></i>
+
+            <i id="img2" class="_item fa fa-server fa-5x hvr-wobble-to-bottom-right"
+               aria-hidden="true"></i>
+
+            <i id="img3" class="_item fa fa-film fa-5x hvr-wobble-to-bottom-right" aria-hidden="true"></i>
+
+            <i id="img4" class="_item fa fa-car fa-5x hvr-wobble-to-bottom-right" aria-hidden="true"></i>
+
+            <i id="img5" class="_item fa fa-tachometer fa-5x hvr-wobble-to-bottom-right"
+               aria-hidden="true"></i>
+
+            <i id="img6" class="_item fa fa-users fa-5x hvr-wobble-to-bottom-right" aria-hidden="true"></i>
         </div>
 
         <div id="paper"></div>
