--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
     <script src="components/confirm_box/confirmBoxDirective.js"></script>
     <script src="components/debug/logDirective.js"></script>
     <script src="components/visuals/barChartDirective.js"></script>
+    <script src="components/visuals/lineChartDirective.js"></script>
 
     <!-- filters -->
     <script src="components/filters/customFilters.js"></script>
