--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="container" ng-app="app">
 
-<horizontal-bar-chart></horizontal-bar-chart>
+<horizontal-bar-chart data="[{letter:'A', count:15}]"></horizontal-bar-chart>
 
 </body>
 </html>
