--- a/app/index.html
+++ b/app/index.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8">
     <title>Web Service</title>
 
-    <!-- =============== JointJS =============== -->
-    <link rel="stylesheet" href="styles/joint.css"/>
+    <!-- =============== JQUERY =============== -->
     <script src="scripts/jquery/jquery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
-    <script src="scripts/lodash.js"></script>
-    <script src="scripts/backbone.js"></script>
-    <script src="scripts/joint/joint.js"></script>
-    <script src="features/graph/joint_setup.js"></script>
-
-    <!-- css for jquery-ui/jointjs -->
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- =============== Bootstrap =============== -->
     <link rel="stylesheet" href="styles/bootstrap/dist/css/bootstrap.css">
@@ -34,7 +24,6 @@
     <script src="features/navbar/NavBarController.js"></script>
     <script src="features/project/list/projectListController.js"></script>
     <script src="features/project/info/sidebarController.js"></script>
-    <script src="features/project/info/summaryController.js"></script>
 
     <!-- directives -->
     <script src="features/navbar/NavBarDirective.js"></script>
@@ -50,17 +39,18 @@
     <script src="components/debug/logDirective.js"></script>
     <script src="components/visuals/barChartDirective.js"></script>
     <script src="components/visuals/lineChartDirective.js"></script>
+    <script src="components/visuals/webserviceGuiDirective.js"></script>
 
     <!-- filters -->
     <script src="components/filters/customFilters.js"></script>
 
     <!-- factories -->
     <script src="features/project/list/projectFactory.js"></script>
-    <script src="features/project/info/sidebarFactory.js"></script>
 
     <!-- =============== Stylesheet =============== -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/hover.css">
+    <link rel="stylesheet" href="styles/graphs.css">
 
     <!-- =============== Font Awesome =============== -->
     <link rel="stylesheet"
@@ -69,6 +59,8 @@
     <!-- =============== D3 =============== -->
     <script src="//d3js.org/d3.v3.min.js"></script>
 
+    <!-- =============== GRAPH =============== -->
+    <script src="components/visuals/graph.js"></script>
 </head>
 
 
