Set up default scope: gui directive

--- a/app/features/project/info/project-info.html
+++ b/app/features/project/info/project-info.html
@@ -87,7 +87,7 @@
             <div ng-switch on="selectedOption.name">
 
                 <div ng-switch-when="Graph">
-                    <webservice-gui></webservice-gui>
+                    <webservice-gui project="activeProject"></webservice-gui>
                 </div>
 
                 <div ng-switch-when="Reports">
