--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="components/visuals/barChartDirective.js"></script>
     <script src="components/visuals/lineChartDirective.js"></script>
     <script src="components/visuals/webserviceGuiDirective.js"></script>
+    <script src="components/visuals/scatterPlotDirectives.js"></script>
 
     <!-- filters -->
     <script src="components/filters/customFilters.js"></script>
@@ -65,6 +66,7 @@
 
 
 <body ng-controller="ProjectCtrl">
+
 <header>
     <nav-bar></nav-bar>
     <carosuel></carosuel>
